fix : file rename

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,6 @@ spring.datasource.username=hp
 spring.datasource.password=hp12341234
 
 spring.jpa.database=mysql
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=true
@@ -13,5 +12,8 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.openai.model=gpt-4-turbo
 spring.openai.api.key=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
 spring.openai.api.url=https://api.openai.com/v1/chat/completions
+
+org.gradle.logging.level=info
+
 
 server.port=8081
