fix : CustomRestTemplate 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,13 +4,13 @@ spring.datasource.username=hp
 spring.datasource.password=hp12341234
 
 spring.jpa.database=mysql
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-spring.openai.model=gpt-4-turbo
-spring.openai.api.key=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
+spring.openai.model=gpt-3.5-turbo
+spring.openai.api.key=sk-proj-uNBnc3dJVNcT3FFDvSVZT3BlbkFJrz1nKeyjOLTY1XR1EgoE
 spring.openai.api.url=https://api.openai.com/v1/chat/completions
 
 org.gradle.logging.level=info
