--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,13 @@ dependencies {
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
 }
 
+bootJar {
+	enabled = false
+}
+jar {
+	enabled = true
+}
+
 tasks.named('test') {
 	useJUnitPlatform()
 }
