--- a/build.gradle
+++ b/build.gradle
@@ -34,15 +34,13 @@ dependencies {
 }
 
 
-jar {
+bootJar {
 	enabled = false
 }
-
-bootJar {
-	manifest {
-		attributes 'Main-Class': 'com.graduate.HealthProtector'
-	}
+jar {
+	enabled = true
 }
+
 
 tasks.named('test') {
 	useJUnitPlatform()
