--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,7 @@ spring.openai.model=gpt-3.5-turbo
 spring.openai.api.key=sk-proj-uNBnc3dJVNcT3FFDvSVZT3BlbkFJrz1nKeyjOLTY1XR1EgoE
 spring.openai.api.url=https://api.openai.com/v1/chat/completions
 
-org.gradle.logging.level=info
+server.port=8001
 
-server.port=8000
+#logging.level.org.springframework=DEBUG
+
