--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ bin/
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
+src/main/.env.properties
 
 ### NetBeans ###
 /nbproject/private/
@@ -34,4 +35,3 @@ out/
 
 ### VS Code ###
 .vscode/
-.env
