--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,18 @@
+spring.config.import=optional:file:.env[.properties]
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://healthprotector-db.c7ai2gywi7u9.ap-northeast-2.rds.amazonaws.com:3306/healthprotector-db?createDatabaseIfNotExist=true
-spring.datasource.username=hp
-spring.datasource.password=hp12341234
+spring.datasource.url=jdbc:mysql://${MYSQL_PORT}/healthprotector-db?createDatabaseIfNotExist=true
+spring.datasource.username=${MYSQL_USERNAME}
+spring.datasource.password=${MYSQL_PASSWORD}
+
+spring.openai.model=${OPENAI_MODEL}
+spring.openai.api.key=${OPENAI_APIKEY}
+spring.openai.api.url=${OPENAI_URL}
 
 spring.jpa.database=mysql
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
-spring.openai.model=gpt-3.5-turbo
-spring.openai.api.key=sk-proj-uNBnc3dJVNcT3FFDvSVZT3BlbkFJrz1nKeyjOLTY1XR1EgoE
-spring.openai.api.url=https://api.openai.com/v1/chat/completions
 
 server.port=8001
 
