--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
-spring.config.import=optional:file:.env[.properties]
+spring.config.import=optional:file:.env.properties
+
+# MySQL ??
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://${MYSQL_PORT}/healthprotector-db?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST}:${MYSQL_PORT}/healthprotector-db?createDatabaseIfNotExist=true
 spring.datasource.username=${MYSQL_USERNAME}
 spring.datasource.password=${MYSQL_PASSWORD}
 
@@ -14,7 +16,7 @@ spring.jpa.generate-ddl=false
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+spring.jackson.time-zone=Asia/Seoul
 server.port=8001
 
-#logging.level.org.springframework=DEBUG
 
