--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
-spring.config.import=optional:file:.env.properties
+spring.config.import=optional:file:.env[.properties]
 
-# MySQL ??
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST}:${MYSQL_PORT}/healthprotector-db?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://${MYSQL_PORT}/healthprotector-db?createDatabaseIfNotExist=true
 spring.datasource.username=${MYSQL_USERNAME}
 spring.datasource.password=${MYSQL_PASSWORD}
 
